--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,83 +2,85 @@
 <html>
     <head>
         <meta charset="utf-8">
-		<title>tic-tac-toe</title> 
-        <style type = "text/CSS">
+        <title>tic-tac-toe</title>
+        <style type="text/css">
             .symbol {
-				font-family: Calibri;
-				font-size: 48px;
+                font-family: Calibri;
+                font-size: 48px;
             }
-			tr {
-				height: 100px;
-			}
-			td {
-				width: 100px;
-				text-align: center;
-			}
+            tr {
+                height: 100px;
+            }
+            td {
+                width: 100px;
+                text-align: center;
+                cursor: pointer;
+            }
+            .taken {
+                cursor: not-allowed;
+                background-color: #f0f0f0;
+            }
         </style>
         <script>
-		var count = 0; 
-		var player = 1;
-		function determine(id) {
-			var grids = [];
-			var isLine = false;
-			var currentSelection = document.getElementById(id);		
+            var count = 0;
+            var player = 1;
+            var gameWon = false;
 
-			if (currentSelection.innerHTML) {
-				window.alert("此位置無法選取！");
-			} else if (player == 1) {
-				currentSelection.innerHTML = 'X'; 
-				player = 2; 
-				count++; 
-			} else if (player == 2) {
-				currentSelection.innerHTML = 'O'; 
-				player = 1; 
-				count++;
-			}
-			
-			for (var i = 1; i <= 3; i++) {
-				grids[i] = [];
-				for (var j = 1; j <= 3; j++) {
-					grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
-					console.log("i: " + i + ", j: " + j + ", value: " + grids[i][j]);
-				}				
-			}
+            // Function to check for a winner
+            function checkWinner(grids) {
+                for (var i = 1; i <= 3; i++) {
+                    // Check rows and columns
+                    if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2] == grids[i][3])) return true;
+                    if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && (grids[2][i] == grids[3][i])) return true;
+                }
+                // Check diagonals
+                if ((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2] == grids[3][3])) return true;
+                if ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2] == grids[1][3])) return true;
+                return false;
+            }
 
-			for (var i = 1; i <= 3; i++) {
-				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2]== grids[i][3])) {
-					isLine = true;
-				}
-				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && ( grids[2][i] == grids[3][i])) {
-					isLine = true;
-				}				
-			}
-			
-			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
-				isLine = true;
-			}
-			
-			if (isLine == true) {			
-				if (currentSelection.innerHTML == "O") {
-					setTimeout(() => { 
-						window.alert("O贏了！"); 
-						location.reload();
-					}, 300) ;					
-				}
-				else if (currentSelection.innerHTML == "X") {
-					setTimeout(() => { 
-						window.alert("X贏了！"); 
-						location.reload();
-					}, 300) ;		
-				}
-			} else if (count == 9) {
-				setTimeout(() => { 
-					window.alert("平手"); 
-					location.reload();
-				}, 300) ;		
-			}			
-			
-		}
-             
+            // Main function to handle each grid click
+            function determine(id) {
+                if (gameWon) return;  // Exit if the game is already won
+
+                var currentSelection = document.getElementById(id);
+
+                // Prevent selecting the same cell again
+                if (currentSelection.classList.contains('taken')) {
+                    window.alert("此位置無法選取！");
+                    return;
+                }
+
+                // Set the symbol based on the current player
+                currentSelection.innerHTML = player === 1 ? 'X' : 'O';
+                currentSelection.classList.add('taken');
+                player = player === 1 ? 2 : 1;
+                count++;
+
+                // Collect current grid values into a 2D array
+                var grids = [];
+                for (var i = 1; i <= 3; i++) {
+                    grids[i] = [];
+                    for (var j = 1; j <= 3; j++) {
+                        grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
+                    }
+                }
+
+                // Check for a win
+                if (checkWinner(grids)) {
+                    gameWon = true;
+                    setTimeout(() => {
+                        window.alert((player === 2 ? 'X' : 'O') + " 贏了！");
+                        location.reload();
+                    }, 300);
+                } else if (count == 9) {
+                    // If all 9 cells are filled and no one won, it's a draw
+                    setTimeout(() => {
+                        window.alert("平手");
+                        location.reload();
+                    }, 300);
+                }
+            }
         </script>
     </head>
     <body>
