--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -27,11 +27,11 @@
 			if (currentSelection.innerHTML) {
 				window.alert("此位置無法選取！");
 			} else if (player == 1) {
-				currentSelection.innerHTML = 'X'; 
+				currentSelection.innerHTML = '<span style="color: blue;">X</span>'; 
 				player = 2; 
 				count++; 
 			} else if (player == 2) {
-				currentSelection.innerHTML = 'O'; 
+				currentSelection.innerHTML ='<span style="color: red;">O</span>'; 
 				player = 1; 
 				count++;
 			}
@@ -58,13 +58,13 @@
 			}
 			
 			if (isLine == true) {			
-				if (currentSelection.innerHTML == "O") {
+				if (currentSelection.innerHTML.includes("O")) {
 					setTimeout(() => { 
 						window.alert("O贏了！"); 
 						location.reload();
 					}, 300) ;					
 				}
-				else if (currentSelection.innerHTML == "X") {
+				else if (currentSelection.innerHTML.includes("X")) {
 					setTimeout(() => { 
 						window.alert("X贏了！"); 
 						location.reload();
