--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -5,7 +5,7 @@
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
             .symbol {
-		    		color: #313f48
+		    		color: #313f48;
 				font-family: Calibri;
 				font-size: 48px;
             }
