--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -19,11 +19,25 @@
         <script>
 		var count = 0; 
 		var player = 1;
+		function checkWinner(grids) {
+                for (var i = 1; i <= 3; i++) {
+                    if (grids[i][1] != "" && grids[i][1] == grids[i][2] && grids[i][2] == grids[i][3]) {
+                        return grids[i][1];
+                    }
+                    if (grids[1][i] != "" && grids[1][i] == grids[2][i] && grids[2][i] == grids[3][i]) {
+                        return grids[1][i];
+                    }
+                }
+                if ((grids[1][1] != "" && grids[1][1] == grids[2][2] && grids[2][2] == grids[3][3]) ||
+                    (grids[3][1] != "" && grids[3][1] == grids[2][2] && grids[2][2] == grids[1][3])) {
+                    return grids[2][2];
+                }
+                return null; // No winner
+            }
 		function determine(id) {
 			var grids = [];
 			var isLine = false;
 			var currentSelection = document.getElementById(id);		
-
 			if (currentSelection.innerHTML) {
 				window.alert("此位置無法選取！");
 			} else if (player == 1) {
@@ -44,39 +58,18 @@
 				}				
 			}
 
-			for (var i = 1; i <= 3; i++) {
-				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2]== grids[i][3])) {
-					isLine = true;
-				}
-				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && ( grids[2][i] == grids[3][i])) {
-					isLine = true;
-				}				
-			}
-			
-			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
-				isLine = true;
-			}
-			
-			if (isLine == true) {			
-				if (currentSelection.innerHTML == "O") {
-					setTimeout(() => { 
-						window.alert("O贏了！"); 
-						location.reload();
-					}, 300) ;					
-				}
-				else if (currentSelection.innerHTML == "X") {
-					setTimeout(() => { 
-						window.alert("X贏了！"); 
-						location.reload();
-					}, 300) ;		
-				}
+			var winner = checkWinner(grids);
+            		if (winner) {
+                  	  setTimeout(() => { 
+				  window.alert(winner + "贏了！"); 
+				  location.reload();
+			  }, 300);
 			} else if (count == 9) {
 				setTimeout(() => { 
 					window.alert("平手"); 
 					location.reload();
-				}, 300) ;		
-			}			
-			
+				}, 300);		
+			}	
 		}
              
         </script>
