--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -19,6 +19,7 @@
         <script>
 		var count = 0; 
 		var player = 1;
+		var k = 0;
 		function determine(id) {
 			var grids = [];
 			var isLine = false;
