Made <h1>This is an edit </h1> modifications for pull request

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -82,6 +82,7 @@
         </script>
     </head>
     <body>
+		<h1>This is an edit</h1> <!--This is an edit for exercise 3-->
         <table id="table" border="1px" class="symbol">
             <tr>
                 <td id='grid11' onclick="determine(id);"></td>
