--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-		<title>tic-tac-toe</title> 
+		<title>new-tic-tac</title> 
         <style type = "text/CSS">
             .symbol {
-				font-family: Calibri;
-				font-size: 48px;
+				font-family: Arial;
+				font-size: 50px;
             }
 			tr {
 				height: 100px;
