--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -5,6 +5,7 @@
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
             .symbol {
+				background-color: cornflowerblue;
 				font-family: Calibri;
 				font-size: 48px;
             }
