Import JQuery and change codes of html modification to JQuery style

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -16,22 +16,23 @@
 				text-align: center;
 			}
         </style>
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script>
 		var count = 0; 
 		var player = 1;
 		function determine(id) {
 			var grids = [];
 			var isLine = false;
-			var currentSelection = document.getElementById(id);		
+			var currentSelection = $(`#${id}`);		
 
-			if (currentSelection.innerHTML) {
+			if (currentSelection.text()) {
 				window.alert("此位置無法選取！");
 			} else if (player == 1) {
-				currentSelection.innerHTML = 'X'; 
+				currentSelection.html('X'); 
 				player = 2; 
 				count++; 
 			} else if (player == 2) {
-				currentSelection.innerHTML = 'O'; 
+				currentSelection.html('O');
 				player = 1; 
 				count++;
 			}
@@ -39,7 +40,7 @@
 			for (var i = 1; i <= 3; i++) {
 				grids[i] = [];
 				for (var j = 1; j <= 3; j++) {
-					grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
+					grids[i][j] = $(`#grid${i}${j}`).html();
 					console.log("i: " + i + ", j: " + j + ", value: " + grids[i][j]);
 				}				
 			}
@@ -56,15 +57,14 @@
 			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
 				isLine = true;
 			}
-			
 			if (isLine == true) {			
-				if (currentSelection.innerHTML == "O") {
+				if (currentSelection.html() == "O") {
 					setTimeout(() => { 
 						window.alert("O贏了！"); 
 						location.reload();
 					}, 300) ;					
 				}
-				else if (currentSelection.innerHTML == "X") {
+				else if (currentSelection.html() == "X") {
 					setTimeout(() => { 
 						window.alert("X贏了！"); 
 						location.reload();
