--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -25,7 +25,7 @@
 			var isLine = false;
 			var currentSelection = $(`#${id}`);		
 
-			if (currentSelection.text()) {
+			if (currentSelection.html()) {
 				window.alert("此位置無法選取！");
 			} else if (player == 1) {
 				currentSelection.html('X'); 
