Add restart button

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -99,5 +99,6 @@
                 <td id='grid33' onclick="determine(id);"></td>
             </tr>
         </table>
+		<button onclick="location.reload();">重新開始遊戲</button>
     </body>
 </html>
