--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-		<title>tic-tac-toe</title> 
+		<title>tic-tac-toe changed</title> 
         <style type = "text/CSS">
             .symbol {
 				font-family: Calibri;
@@ -60,13 +60,13 @@
 			if (isLine == true) {			
 				if (currentSelection.innerHTML == "O") {
 					setTimeout(() => { 
-						window.alert("O贏了！"); 
+						window.alert("是O贏了！"); 
 						location.reload();
 					}, 300) ;					
 				}
 				else if (currentSelection.innerHTML == "X") {
 					setTimeout(() => { 
-						window.alert("X贏了！"); 
+						window.alert("是X贏了！"); 
 						location.reload();
 					}, 300) ;		
 				}
