--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 		<title>tic-tac-toe</title> 
-        <style type = "text/CSS">
+        <style type="text/css">
             .symbol {
 				font-family: Calibri;
 				font-size: 48px;
@@ -28,10 +28,12 @@
 				window.alert("此位置無法選取！");
 			} else if (player == 1) {
 				currentSelection.innerHTML = 'X'; 
+				currentSelection.style.color = 'blue'; // Set X to blue color
 				player = 2; 
 				count++; 
 			} else if (player == 2) {
 				currentSelection.innerHTML = 'O'; 
+				currentSelection.style.color = 'red'; // Set O to red color
 				player = 1; 
 				count++;
 			}
@@ -45,15 +47,15 @@
 			}
 
 			for (var i = 1; i <= 3; i++) {
-				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2]== grids[i][3])) {
+				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2] == grids[i][3])) {
 					isLine = true;
 				}
-				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && ( grids[2][i] == grids[3][i])) {
+				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && (grids[2][i] == grids[3][i])) {
 					isLine = true;
 				}				
 			}
 			
-			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
+			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2] == grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2] == grids[1][3]))) {
 				isLine = true;
 			}
 			
@@ -62,19 +64,19 @@
 					setTimeout(() => { 
 						window.alert("O贏了！"); 
 						location.reload();
-					}, 300) ;					
+					}, 300);					
 				}
 				else if (currentSelection.innerHTML == "X") {
 					setTimeout(() => { 
 						window.alert("X贏了！"); 
 						location.reload();
-					}, 300) ;		
+					}, 300);		
 				}
 			} else if (count == 9) {
 				setTimeout(() => { 
 					window.alert("平手"); 
 					location.reload();
-				}, 300) ;		
+				}, 300);		
 			}			
 			
 		}
