Changed 'O' color to blue

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -31,7 +31,7 @@
 				player = 2; 
 				count++; 
 			} else if (player == 2) {
-				currentSelection.innerHTML = 'O'; 
+				currentSelection.innerHTML = '<span style="color: blue;">O</span>'; 
 				player = 1; 
 				count++;
 			}
