--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -6,13 +6,14 @@
         <style type = "text/CSS">
             .symbol {
 				font-family: Calibri;
-				font-size: 48px;
+				font-size: 50px;
+                color: blueviolet;
             }
 			tr {
-				height: 100px;
+				height: 120px;
 			}
 			td {
-				width: 100px;
+				width: 120px;
 				text-align: center;
 			}
         </style>
