--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
+			* {
+				background-color: aqua;
+			}
             .symbol {
 				font-family: Calibri;
 				font-size: 48px;
