feat: Add topic on the top of table

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -82,6 +82,7 @@
         </script>
     </head>
     <body>
+		<h1>Tic Tac Toe</h1>
         <table id="table" border="1px" class="symbol">
             <tr>
                 <td id='grid11' onclick="determine(id);"></td>
