--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -61,12 +61,14 @@
 				if (currentSelection.innerHTML == "O") {
 					setTimeout(() => { 
 						window.alert("O贏了！"); 
+						console.log("O贏了！");
 						location.reload();
 					}, 300) ;					
 				}
 				else if (currentSelection.innerHTML == "X") {
 					setTimeout(() => { 
 						window.alert("X贏了！"); 
+						console.log("X贏了！");
 						location.reload();
 					}, 300) ;		
 				}
