not a useful change

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -25,7 +25,7 @@
 			var currentSelection = document.getElementById(id);		
 
 			if (currentSelection.innerHTML) {
-				window.alert("此位置無法選取！");
+				window.alert("此位置無法選取！！！！！");
 			} else if (player == 1) {
 				currentSelection.innerHTML = 'X'; 
 				player = 2; 
@@ -60,13 +60,13 @@
 			if (isLine == true) {			
 				if (currentSelection.innerHTML == "O") {
 					setTimeout(() => { 
-						window.alert("O贏了！"); 
+						window.alert("O贏了！！！！！！！！！！！！"); 
 						location.reload();
 					}, 300) ;					
 				}
 				else if (currentSelection.innerHTML == "X") {
 					setTimeout(() => { 
-						window.alert("X贏了！"); 
+						window.alert("X贏了！！！！！！！！！！！"); 
 						location.reload();
 					}, 300) ;		
 				}
