--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -15,6 +15,14 @@
 				width: 100px;
 				text-align: center;
 			}
+			/* 把第4行和第4列的格子藏起來 */
+			table {
+           		border: none; 
+			}
+			#grid41, #grid42, #grid43, #grid44,
+			#grid14, #grid24, #grid34 {
+				border: none; 
+			}
         </style>
         <script>
 		var count = 0; 
@@ -36,26 +44,47 @@
 				count++;
 			}
 			
-			for (var i = 1; i <= 3; i++) {
+			for (var i = 1; i <= 4; i++) {
 				grids[i] = [];
-				for (var j = 1; j <= 3; j++) {
+				for (var j = 1; j <= 4; j++) {
 					grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
 					console.log("i: " + i + ", j: " + j + ", value: " + grids[i][j]);
 				}				
 			}
 
-			for (var i = 1; i <= 3; i++) {
+			// 多判斷第4行和第4列
+			for (var i = 1; i <= 4; i++) {
 				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2]== grids[i][3])) {
+					isLine = true;
+				}
+				if ((grids[i][2] != "") && (grids[i][2] == grids[i][3]) && (grids[i][3]== grids[i][4])) {
 					isLine = true;
 				}
 				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && ( grids[2][i] == grids[3][i])) {
 					isLine = true;
 				}				
+				if ((grids[2][i] != "") && (grids[2][i] == grids[3][i]) && ( grids[3][i] == grids[4][i])) {
+					isLine = true;
+				}		
 			}
-			
-			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
-				isLine = true;
+
+			// 前兩行是3x3的對角線判斷，後面是4x4的對角線判斷
+            if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2] == grids[3][3])) || 
+				((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2] == grids[1][3])) || 
+				((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2] == grids[3][3])) || 
+				((grids[2][2] != "") && (grids[2][2] == grids[3][3]) && (grids[3][3] == grids[4][4])) || 
+                ((grids[4][1] != "") && (grids[4][1] == grids[3][2]) && (grids[3][2] == grids[2][3])) ||
+				((grids[3][2] != "") && (grids[3][2] == grids[2][3]) && (grids[2][3] == grids[1][4]))) {
+                isLine = true; 
+            }
+
+			// 其他可能斜線
+			if (((grids[1][2] != "") && (grids[1][2] == grids[2][3]) && (grids[2][3] == grids[3][4])) || // (1,2), (2,3), (3,4)
+				((grids[2][1] != "") && (grids[2][1] == grids[3][2]) && (grids[3][2] == grids[4][3])) || // (2,1), (3,2), (4,3)
+				((grids[2][4] != "") && (grids[2][4] == grids[3][3]) && (grids[3][3] == grids[4][2]))) { // (2,4), (3,3), (4,2)
+				isLine = true; 
 			}
+
 			
 			if (isLine == true) {			
 				if (currentSelection.innerHTML == "O") {
@@ -70,7 +99,7 @@
 						location.reload();
 					}, 300) ;		
 				}
-			} else if (count == 9) {
+			} else if (count == 16) { 
 				setTimeout(() => { 
 					window.alert("平手"); 
 					location.reload();
@@ -87,16 +116,25 @@
                 <td id='grid11' onclick="determine(id);"></td>
                 <td id='grid12' onclick="determine(id);"></td>
                 <td id='grid13' onclick="determine(id);"></td>
+				<td id='grid14' onclick="determine(id);"></td>
             </tr>
             <tr>
                 <td id='grid21' onclick="determine(id);"></td>
                 <td id='grid22' onclick="determine(id);"></td>
                 <td id='grid23' onclick="determine(id);"></td>
+				<td id='grid24' onclick="determine(id);"></td>
             </tr>
             <tr>
                 <td id='grid31' onclick="determine(id);"></td>
                 <td id='grid32' onclick="determine(id);"></td>
                 <td id='grid33' onclick="determine(id);"></td>
+				<td id='grid34' onclick="determine(id);"></td>
+            </tr>
+			<tr>
+                <td id='grid41' onclick="determine(id);"></td>
+                <td id='grid42' onclick="determine(id);"></td>
+                <td id='grid43' onclick="determine(id);"></td>
+				<td id='grid44' onclick="determine(id);"></td>
             </tr>
         </table>
     </body>
