--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -72,7 +72,7 @@
 				}
 			} else if (count == 9) {
 				setTimeout(() => { 
-					window.alert("平手"); 
+					window.alert("Draw平手"); 
 					location.reload();
 				}, 300) ;		
 			}			
