Change the table's border and size

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,11 +8,14 @@
 				font-family: Calibri;
 				font-size: 48px;
             }
+			table{
+				border:4px, solid, navy;
+			}
 			tr {
-				height: 100px;
+				height: 200px;
 			}
 			td {
-				width: 100px;
+				width: 200px;
 				text-align: center;
 			}
         </style>
