--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
+	    body {
+                background-color: #d2c2b2; /* 設定頁面背景顏色 */
+            }
             .symbol {
 				font-family: Calibri;
 				font-size: 48px;
