--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,103 +1,116 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="utf-8">
-		<title>tic-tac-toe</title> 
-        <style type = "text/CSS">
-            .symbol {
-				font-family: Calibri;
-				font-size: 48px;
+<head>
+    <meta charset="utf-8">
+    <title>Tic-Tac-Toe</title>
+    <style type="text/CSS">
+        body {
+            font-family: Calibri;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .symbol {
+            font-size: 48px;
+        }
+        table {
+            border-collapse: collapse;
+        }
+        tr {
+            height: 100px;
+        }
+        td {
+            width: 100px;
+            text-align: center;
+            cursor: pointer;
+            background-color: #fff;
+            border: 2px solid #ccc;
+            transition: background-color 0.3s;
+        }
+        td:hover {
+            background-color: #e0e0e0;
+        }
+    </style>
+    <script>
+        let count = 0;
+        let player = 1;
+
+        function determine(id) {
+            const currentSelection = document.getElementById(id);
+
+            if (currentSelection.innerHTML) {
+                window.alert("此位置無法選取！");
+                return;
             }
-			tr {
-				height: 100px;
-			}
-			td {
-				width: 100px;
-				text-align: center;
-			}
-        </style>
-        <script>
-		var count = 0; 
-		var player = 1;
-		function determine(id) {
-			var grids = [];
-			var isLine = false;
-			var currentSelection = document.getElementById(id);		
 
-			if (currentSelection.innerHTML) {
-				window.alert("此位置無法選取！");
-			} else if (player == 1) {
-				currentSelection.innerHTML = 'X'; 
-				player = 2; 
-				count++; 
-			} else if (player == 2) {
-				currentSelection.innerHTML = 'O'; 
-				player = 1; 
-				count++;
-			}
-			
-			for (var i = 1; i <= 3; i++) {
-				grids[i] = [];
-				for (var j = 1; j <= 3; j++) {
-					grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
-					console.log("i: " + i + ", j: " + j + ", value: " + grids[i][j]);
-				}				
-			}
+            currentSelection.innerHTML = player === 1 ? 'X' : 'O';
+            count++;
+            player = player === 1 ? 2 : 1;
 
-			for (var i = 1; i <= 3; i++) {
-				if ((grids[i][1] != "") && (grids[i][1] == grids[i][2]) && (grids[i][2]== grids[i][3])) {
-					isLine = true;
-				}
-				if ((grids[1][i] != "") && (grids[1][i] == grids[2][i]) && ( grids[2][i] == grids[3][i])) {
-					isLine = true;
-				}				
-			}
-			
-			if (((grids[1][1] != "") && (grids[1][1] == grids[2][2]) && (grids[2][2]== grids[3][3])) || ((grids[3][1] != "") && (grids[3][1] == grids[2][2]) && (grids[2][2]== grids[1][3]))) {
-				isLine = true;
-			}
-			
-			if (isLine == true) {			
-				if (currentSelection.innerHTML == "O") {
-					setTimeout(() => { 
-						window.alert("O贏了！"); 
-						location.reload();
-					}, 300) ;					
-				}
-				else if (currentSelection.innerHTML == "X") {
-					setTimeout(() => { 
-						window.alert("X贏了！"); 
-						location.reload();
-					}, 300) ;		
-				}
-			} else if (count == 9) {
-				setTimeout(() => { 
-					window.alert("平手"); 
-					location.reload();
-				}, 300) ;		
-			}			
-			
-		}
-             
-        </script>
-    </head>
-    <body>
-        <table id="table" border="1px" class="symbol">
-            <tr>
-                <td id='grid11' onclick="determine(id);"></td>
-                <td id='grid12' onclick="determine(id);"></td>
-                <td id='grid13' onclick="determine(id);"></td>
-            </tr>
-            <tr>
-                <td id='grid21' onclick="determine(id);"></td>
-                <td id='grid22' onclick="determine(id);"></td>
-                <td id='grid23' onclick="determine(id);"></td>
-            </tr>
-            <tr>
-                <td id='grid31' onclick="determine(id);"></td>
-                <td id='grid32' onclick="determine(id);"></td>
-                <td id='grid33' onclick="determine(id);"></td>
-            </tr>
-        </table>
-    </body>
+            if (checkWin() || count === 9) {
+                setTimeout(resetGame, 300); // Reset after a short delay
+            }
+        }
+
+        function checkWin() {
+            const grids = [];
+            for (let i = 1; i <= 3; i++) {
+                grids[i] = [];
+                for (let j = 1; j <= 3; j++) {
+                    grids[i][j] = document.getElementById("grid" + i + j).innerHTML;
+                }
+            }
+
+            for (let i = 1; i <= 3; i++) {
+                if (grids[i][1] && grids[i][1] === grids[i][2] && grids[i][2] === grids[i][3]) {
+                    announceWinner(grids[i][1]);
+                    return true;
+                }
+                if (grids[1][i] && grids[1][i] === grids[2][i] && grids[2][i] === grids[3][i]) {
+                    announceWinner(grids[1][i]);
+                    return true;
+                }
+            }
+
+            if ((grids[1][1] && grids[1][1] === grids[2][2] && grids[2][2] === grids[3][3]) ||
+                (grids[3][1] && grids[3][1] === grids[2][2] && grids[2][2] === grids[1][3])) {
+                announceWinner(grids[2][2]);
+                return true;
+            }
+            return false;
+        }
+
+        function announceWinner(winner) {
+            window.alert(winner + "贏了！");
+        }
+
+        function resetGame() {
+            const cells = document.querySelectorAll('td');
+            cells.forEach(cell => cell.innerHTML = "");
+            count = 0;
+            player = 1;
+        }
+    </script>
+</head>
+<body>
+<table id="table" class="symbol">
+    <tr>
+        <td id='grid11' onclick="determine(id);"></td>
+        <td id='grid12' onclick="determine(id);"></td>
+        <td id='grid13' onclick="determine(id);"></td>
+    </tr>
+    <tr>
+        <td id='grid21' onclick="determine(id);"></td>
+        <td id='grid22' onclick="determine(id);"></td>
+        <td id='grid23' onclick="determine(id);"></td>
+    </tr>
+    <tr>
+        <td id='grid31' onclick="determine(id);"></td>
+        <td id='grid32' onclick="determine(id);"></td>
+        <td id='grid33' onclick="determine(id);"></td>
+    </tr>
+</table>
+</body>
 </html>
