--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -5,7 +5,7 @@
 		<title>tic-tac-toe</title> 
         <style type = "text/CSS">
             .symbol {
-				font-family: Calibri;
+				font-family: Consolas,monospace;
 				font-size: 48px;
             }
 			tr {
