--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -60,13 +60,13 @@
 			if (isLine == true) {			
 				if (currentSelection.innerHTML == "O") {
 					setTimeout(() => { 
-						window.alert("O贏了！"); 
+						window.alert("O贏了，菜就多練！"); 
 						location.reload();
 					}, 300) ;					
 				}
 				else if (currentSelection.innerHTML == "X") {
 					setTimeout(() => { 
-						window.alert("X贏了！"); 
+						window.alert("X贏了，菜就多練！"); 
 						location.reload();
 					}, 300) ;		
 				}
