I like teacher shang pin ma!!!

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -20,6 +20,7 @@
 		var count = 0; 
 		var player = 1;
 		function determine(id) {
+			console.log("老師我是東毅，我最喜歡馬尚彬了！");
 			var grids = [];
 			var isLine = false;
 			var currentSelection = document.getElementById(id);		
